# GlobalMobilityApplicationAnalyser

./: .gitignore  README.md  demo.py  hello.py  pyproject.toml  requirements.txt  setup.py  template.py
artifact/06_17_2026_22_13_43/data_ingestion/ingested/: test.csv  train.csv
notebooks/: EDA_visa.ipynb  Feature_engineering.ipynb  boston_data_drift_report.html  data_drift_detection_evidently.ipynb
notebooks/catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
notebooks/catboost_info/learn/: events.out.tfevents
visa/Components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
visa/Configuration/: mongo_db_connection.py
visa/Constants/: __init__.py
visa/Entity/: artifact_entity.py  config_entity.py  estimator.py
visa/data_access/: visa_data.py
visa/logger/: __init__.py
visa/pipeline/: training_pipeline.py
visa/utils/: main_utils.py
