[project]
name = "globalmobilityapplicationanalyser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.43.29",
    "botocore>=1.43.29",
    "catboost>=1.2.10",
    "dill>=0.4.1",
    "evidently==0.2.8",
    "fastapi>=0.125.0",
    "from-root>=1.3.0",
    "imblearn>=0.0",
    "ipykernel>=7.3.0",
    "jinja2>=3.1.6",
    "matplotlib>=3.11.0",
    "mypy-boto3-s3>=1.43.14",
    "neuro-mf>=0.0.5",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "plotly>=6.8.0",
    "pymongo>=4.17.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.49.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "globalmobilityapplicationanalyser",
]

[tool.uv.sources]
globalmobilityapplicationanalyser = { workspace = true }
